// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> _isMultiline should render a input tag if _isMultiline is false(default) 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> _isMultiline should render a textarea tag if _isMultiline is true 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <textarea
                class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                rows="1"
                style="height: 0px;"
                type="text"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> default should render a TextInput with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> disabled should render a disabled TextInput 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 kHRfEF"
          disabled=""
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
            disabled=""
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
              style="transform: translate(-NaNpx,-0px);"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 cUrPBs"
                color="shade.980"
                data-testid="ds-text"
                disabled=""
                for="sample-id"
                value="some value"
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 kcOLQv Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                disabled=""
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value="some value"
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
            disabled=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> errorText should render a TextInput with error text if errorText is provided as prop 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 jZIJQj"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
        <div
          class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 kNGuEF"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 cndXnK Spaceweb__Space-sc-1gh69p2-0 cwrKW"
          >
            <div
              class="Textweb__Text-dvo2dp-0 jlzvmT"
              color="negative.900"
              data-testid="ds-text"
            >
              This is error text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> errorText with maxLength should render a TextInput with character count as fraction 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 jZIJQj"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                maxlength="10"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
        <div
          class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 kNGuEF"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 cndXnK Spaceweb__Space-sc-1gh69p2-0 cwrKW"
          >
            <div
              class="Textweb__Text-dvo2dp-0 jlzvmT"
              color="negative.900"
              data-testid="ds-text"
            >
              This is error text
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Spaceweb__Space-sc-1gh69p2-0 geiqBC"
          >
            <div
              class="Textweb__Text-dvo2dp-0 cqcyer"
              color="shade.950"
              data-testid="ds-text"
            >
              0/10
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> focus should have focus when input is focused 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
              style="transform: translate(-NaNpx,-0px);"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 ekdIGf"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> helpText should render a TextInput with help text if helpText is provided as prop 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
        <div
          class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 kNGuEF"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 cndXnK Spaceweb__Space-sc-1gh69p2-0 cwrKW"
          >
            <div
              class="Textweb__Text-dvo2dp-0 cqcyer"
              color="shade.950"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> helpText with maxLength should render a TextInput with character count as fraction 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                maxlength="10"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
        <div
          class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 kNGuEF"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 cndXnK Spaceweb__Space-sc-1gh69p2-0 cwrKW"
          >
            <div
              class="Textweb__Text-dvo2dp-0 cqcyer"
              color="shade.950"
              data-testid="ds-text"
            >
              This is help text
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 iLSGsw Spaceweb__Space-sc-1gh69p2-0 geiqBC"
          >
            <div
              class="Textweb__Text-dvo2dp-0 cqcyer"
              color="shade.950"
              data-testid="ds-text"
            >
              0/10
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> iconLeft should render a TextInput with iconLeft 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <svg
                class="Flexweb__Flex-h5ddrw-0 bpsvBt Spaceweb__Space-sc-1gh69p2-0 bCpHYM"
                data-testid="ds-icon"
                fill="rgba(22, 47, 86, 0.38)"
                height="16"
                testID="input-icon"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
                />
              </svg>
              <input
                class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> iconRight should render a TextInput with iconRight 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
              <svg
                class="Flexweb__Flex-h5ddrw-0 bpsvBt Spaceweb__Space-sc-1gh69p2-0 cXkWSM"
                data-testid="ds-icon"
                fill="rgba(22, 47, 86, 0.38)"
                height="16"
                testID="input-icon"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8m0-18A10 10 0 002 12a10 10 0 0010 10 10 10 0 0010-10A10 10 0 0012 2m-1 15h2v-6h-2v6z"
                />
              </svg>
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label should render a TextInput with labelPosition on left and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <label
        class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu Spaceweb__Space-sc-1gh69p2-0 fokNlH"
        color="shade.980"
        data-testid="ds-text"
        for="sample-id"
        id="sample-id"
        value=""
        width="medium"
      >
        Sample Label
      </label>
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 hbxknE Spaceweb__Space-sc-1gh69p2-0 cAeDYC Sizeweb__Size-t4oux4-0 cHHTpX"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 fjHdkU Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 iBpGMC Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label should render a TextInput with labelPosition on top(default) and variant filled 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <label
      class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 jUzJRT Spaceweb__Space-sc-1gh69p2-0 dqSztZ"
      color="shade.980"
      data-testid="ds-text"
      for="sample-id"
      id="sample-id"
      value=""
      width="medium"
    >
      Sample Label
    </label>
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 hbxknE Spaceweb__Space-sc-1gh69p2-0 cAeDYC Sizeweb__Size-t4oux4-0 cHHTpX"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 fjHdkU Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 iBpGMC Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> label should render a TextInput with labelPosition on top(default) and variant outlined(default) 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> prefix should render a TextInput with prefix 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <div
                class="Textweb__Text-dvo2dp-0 fXDTpq Spaceweb__Space-sc-1gh69p2-0 bCpHYM"
                color="shade.950"
                data-testid="ds-text"
              >
                ₹
              </div>
              <input
                class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> suffix should render a TextInput with suffix 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                for="sample-id"
                value=""
                width="medium"
              >
                Sample Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                id="sample-id"
                placeholder="Enter text here"
                type="text"
                value=""
              />
              <div
                class="Textweb__Text-dvo2dp-0 fXDTpq Spaceweb__Space-sc-1gh69p2-0 cXkWSM"
                color="shade.950"
                data-testid="ds-text"
              >
                ₹
              </div>
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> variant should render a filled variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <label
      class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 jUzJRT Spaceweb__Space-sc-1gh69p2-0 dqSztZ"
      color="shade.980"
      data-testid="ds-text"
      value=""
      width="medium"
    >
      Label
    </label>
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 hbxknE Spaceweb__Space-sc-1gh69p2-0 cAeDYC Sizeweb__Size-t4oux4-0 cHHTpX"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 fjHdkU Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 iBpGMC Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> variant should render a outlined variant with default props 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width should render a TextInput with auto width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 laciwS"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="auto"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 hHYXCZ Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width should render a TextInput with medium(default) width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="medium"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 cTcGbL Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> width should render a TextInput with small width 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hrYFpH"
  >
    <div
      class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 hHzdeI"
    >
      <div
        class="Viewweb__View-sc-1i53gcl-0 iLSGsw Flexweb__Flex-h5ddrw-0 fsyzhh"
      >
        <div
          class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InteractionContainer-th1lpa-3 lgHHqS"
        >
          <div
            class="Viewweb__View-sc-1i53gcl-0 TextInputweb__FillContainer-th1lpa-2 gwRKpx Spaceweb__Space-sc-1gh69p2-0 gseDFa Sizeweb__Size-t4oux4-0 jMNahJ"
          >
            <div
              class="Viewweb__View-sc-1i53gcl-0 Labelweb__FloatView-sc-164wi1o-0 fRrBNK Spaceweb__Space-sc-1gh69p2-0 iJxdDV"
            >
              <label
                class="Textweb__Text-dvo2dp-0 Labelweb__StyledText-sc-164wi1o-1 fSAEiu"
                color="shade.980"
                data-testid="ds-text"
                value=""
                width="small"
              >
                Label
              </label>
            </div>
            <div
              class="Viewweb__View-sc-1i53gcl-0 TextInputweb__InputContainer-th1lpa-0 cXrEYp Sizeweb__Size-t4oux4-0 dCQgNm Flexweb__Flex-h5ddrw-0 bXkbdN"
            >
              <input
                class="TextInputweb__StyledInput-th1lpa-1 hGuyeE Sizeweb__Size-t4oux4-0 bPaCzX Spaceweb__Space-sc-1gh69p2-0 elJMNa Flexweb__Flex-h5ddrw-0 cndXnK"
                data-testid="ds-text-input"
                placeholder="Enter text here"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="Viewweb__View-sc-1i53gcl-0 Lineweb__Line-msfe36-0 dLqxdC"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
